--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ debugpy==1.8.13
 decorator==5.2.1
 defusedxml==0.7.1
 Django==5.2.1
+django-compressor
 executing==2.2.0
 fastjsonschema==2.21.1
 filelock==3.13.1
