--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,9 @@ debugpy==1.8.13
 decorator==5.2.1
 defusedxml==0.7.1
 Django==5.2.1
+django-appconf==1.1.0
+django-compress==1.0.1
+django-compressor==4.5.1
 executing==2.2.0
 fastjsonschema==2.21.1
 filelock==3.13.1
@@ -97,10 +100,12 @@ python-json-logger==3.3.0
 pytz==2025.1
 PyYAML==6.0.2
 pyzmq==26.3.0
+rcssmin==1.1.2
 referencing==0.36.2
 requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rjsmin==1.2.2
 rpds-py==0.23.1
 scikit-learn==1.6.1
 scipy==1.15.2
@@ -117,6 +122,7 @@ sympy==1.13.1
 terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
+torch==2.6.0+cpu
 tornado==6.4.2
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20241206
